--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>eVCAN</title>
+    <title>Rias's Bio</title>
     <style type="text/css">
         body{
             background-image:url(https://raw.githubusercontent.com/evcann/bio/main/A84F39CE-56B8-4071-B5CC-7ACE6A761750.jpeg);
